--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "json-server": "json-server --watch src/data/db.json --port 5000",
+    "start:dev": "concurrently \"npm run json-server\" \"npm start\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
+    "json-server": "^1.0.0-alpha.23",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1"
   }
